LM - Rolling out dynamic header and footer load from external JQuery file to all pages Introduced new div class "page-container" which serves to hold all contents in body to correctly align body and footer

--- a/assets/css/lminfo_styles.css
+++ b/assets/css/lminfo_styles.css
@@ -7,8 +7,7 @@
     src: url("../fonts/inter/static/Inter-Regular.ttf") format('truetype');
 }
 
-.body-content {
-    width: 90%;
+.page-container {
     margin: auto;
     position: relative;
     min-height: 100vh;
